// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch behaves correctly when interacting 1`] = `
<label
  class="PicassoFormControlLabel-root PicassoSwitch-root"
  data-testid="switch"
>
  <span
    class="MuiSwitch-root MuiSwitch-sizeMedium css-julti5-MuiSwitch"
  >
    <span
      class="MuiSwitch-switchBase MuiSwitch-colorPrimary MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root Mui-checked css-1j7cuh1-MuiButtonBase-root-MuiSwitch"
    >
      <input
        class="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
        type="checkbox"
      />
      <span
        class="MuiSwitch-thumb css-jsexje-MuiSwitch"
      />
    </span>
    <span
      class="MuiSwitch-track css-1yjjitx-MuiSwitch"
    />
  </span>
  <span
    class="PicassoFormLabel-root PicassoFormLabel-inline PicassoFormControlLabel-label PicassoSwitch-label"
  >
    <span
      class="PicassoFormLabel-medium"
    >
      Switch
    </span>
  </span>
</label>
`;

exports[`Switch renders default Switch without label 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span
      class="MuiSwitch-root MuiSwitch-sizeMedium css-julti5-MuiSwitch"
    >
      <span
        class="MuiSwitch-switchBase MuiSwitch-colorPrimary MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root css-1j7cuh1-MuiButtonBase-root-MuiSwitch"
        data-testid="switch"
      >
        <input
          class="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
          type="checkbox"
        />
        <span
          class="MuiSwitch-thumb css-jsexje-MuiSwitch"
        />
      </span>
      <span
        class="MuiSwitch-track css-1yjjitx-MuiSwitch"
      />
    </span>
  </div>
</div>
`;

exports[`Switch renders disabled state 1`] = `
<label
  class="PicassoFormControlLabel-root PicassoSwitch-root PicassoFormControlLabel-disabled"
  data-testid="switch"
>
  <span
    class="MuiSwitch-root MuiSwitch-sizeMedium css-julti5-MuiSwitch"
  >
    <span
      aria-disabled="true"
      class="MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-disabled MuiButtonBase-root Mui-disabled MuiSwitch-switchBase MuiSwitch-colorPrimary Mui-disabled PrivateSwitchBase-root Mui-disabled css-1j7cuh1-MuiButtonBase-root-MuiSwitch"
      tabindex="-1"
    >
      <input
        class="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
        disabled=""
        type="checkbox"
      />
      <span
        class="MuiSwitch-thumb css-jsexje-MuiSwitch"
      />
    </span>
    <span
      class="MuiSwitch-track css-1yjjitx-MuiSwitch"
    />
  </span>
  <span
    class="PicassoFormLabel-root PicassoFormLabel-disabled PicassoFormLabel-inline PicassoFormControlLabel-label PicassoSwitch-label"
  >
    <span
      class="PicassoFormLabel-medium"
    >
      Disabled
    </span>
  </span>
</label>
`;
